--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "opencv-python>=4.10.0.84",
     "scikit-image>=0.24.0",
     "tqdm>=4.66.5",
+    "opencv-contrib-python>=4.10.0.84",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
